@@ -50,9 +50,7 @@
 
 using namespace scheme;
 
-void signal_handler(int signo)
-{
-}
+void signal_handler(int signo) {}
 
 class VMTest : public testing::Test {
 protected:
